Prevents spillage

--- a/src/styles/partials/layout.scss
+++ b/src/styles/partials/layout.scss
@@ -3,6 +3,7 @@
 }
 
 .table-wrapper {
+  overflow: none;
   margin: 20px 5%;
   //height: 50vh; <-- Not yet ;)
 }
